🐛 Fix bug in production w/ cell popovers for cells with numeric heights that have overflowing content
+ Add Cypress regression tests to ensure popovers are rendering from the correct anchor/position

--- a/src/components/datagrid/_data_grid_data_row.scss
+++ b/src/components/datagrid/_data_grid_data_row.scss
@@ -138,6 +138,15 @@
   }
 }
 
+.euiDataGridRowCell__numericalHeight {
+  // Without this rule, popover anchors content that overflows off the page
+  [data-euiportal],
+  .euiPopover,
+  .euiPopover__anchor {
+    height: 100%;
+  }
+}
+
 // Cell actions
 .euiDataGridRowCell__actions {
   display: flex;
